Fix wrapping of license items on terms page

--- a/meta/static/css/flatpage.css
+++ b/meta/static/css/flatpage.css
@@ -12,6 +12,7 @@
 
 #license-item {
 	display: flex;
-	flex-wrap: wrap;
+	/*flex-wrap: wrap;*/
 	gap: 1rem;
+	align-items: center;
 }
